# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "piso"
version = "1.2.0"
description = "Pandas Interval Set Operations: methods for set operations, analytics, lookups and joins on pandas' Interval, IntervalArray and IntervalIndex"
readme = "README.md"
authors = ["Riley Clement <venaturum@gmail.com>"]
maintainers = ["Riley Clement <venaturum@gmail.com>"]
license = "MIT"
repository = "https://github.com/staircase-dev/piso"
homepage = "https://github.com/staircase-dev/piso"
documentation = "https://piso.readthedocs.io"

keywords=[
    'piso',
	'pandas',
	'set',
	'set operations',
	'interval',
	'IntervalArray',
	'IntervalIndex',
	'Data Analysis',
	'Analysis',
	'Data Structures',
]

classifiers=[
	'Operating System :: OS Independent',
	'Intended Audience :: Science/Research',
	'Programming Language :: Python :: 3.9',
	'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
	'Programming Language :: Python :: 3.13',
	'Topic :: Scientific/Engineering',
]


[tool.poetry.dependencies]
python = "^3.9"
staircase = "^2.1.0"

[[tool.poetry.dependencies.pandas]]
python = ">=3.9,<3.10"
version = "^1"

[[tool.poetry.dependencies.pandas]]
python = "^3.10"
version = ">=1.3.4,<3"

[[tool.poetry.dependencies.numpy]]
python = ">=3.9,<3.10"
version = "^1.17"

[[tool.poetry.dependencies.numpy]]
python = "^3.10"
version = ">=1.21.2,<3"


[tool.poetry.dev-dependencies]
ipykernel = "^6"
pytest = "^8"
pytest-cov = "*"
sphinx = "*"
nbsphinx = ">=0.8.5"
sphinx-autobuild = "*"
numpydoc = "*"
notebook = ">= 6.0"
isort = ">=5.8,<5.12"
black = ">=22.10"
flake8 = ">=5"
pre-commit = ">=2.20"
tox=">=3.15"

[tool.poetry.extras]
codecov = ["codecov"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/staircase-dev/piso/issues"

[tool.isort]
# make it compatible with black
profile = "black"
multi_line_output = 3
src_paths = ["piso", "tests"]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = """
    --junitxml=junit.xml
    --ignore setup.py
    --ignore run_test.py
    --cov-report term-missing
    --tb native
    --strict-markers
    --durations=20
	"""
markers = "serial: execute test serially (to avoid race conditions)"
junit_family = "xunit1"
